--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.4.1
+annotated-types==0.7.0
 attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
@@ -15,14 +16,19 @@ jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+multimethod==1.10
+mypy-extensions==1.0.0
 narwhals==1.9.4
 numpy==2.1.2
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
+pandera==0.20.4
 pillow==10.4.0
 protobuf==5.28.2
 pyarrow==17.0.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
@@ -38,6 +44,9 @@ streamlit-sortables==0.2.0
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.1
+typeguard==4.3.0
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+wrapt==1.16.0
